section header completata

--- a/index.html
+++ b/index.html
@@ -45,11 +45,33 @@
 
                 <!-- link tasto accedi -->
                 <div class="accedi">
-                    <a href="" class="link-accedi">Accedi</a>
+                    <a href="" class="link-generale">Accedi</a>
                 </div>
 
 
             </nav>
+
+
+            <!-- scritta accentrata con paragrafo e due link sotto  -->
+            <div class="contenuto-header">
+
+                <!-- titolo  -->
+                <h1 class="titolo-header">Il tuo posto per parlare</h1>
+
+                <!-- paragrafo -->
+                <p class="paragrafo-header">Che tu faccia parte di un club scolastico, un gruppo di gamer, una community
+                    artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui
+                    è più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                </p>
+
+                <!-- link sotto al testo  -->
+                <div class="bottoni-header">
+                    <a href="" class="link-generale bottone1">Scarica per Mac</a>
+                    <a href="" class="link-generale bottone2">Apri Discord nel tuo browser</a>
+
+                </div>
+
+            </div>
 
 
 
