fatta section 2, ho iniziato la terza, senza push

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
             <!-- scritta accentrata con paragrafo e due link sotto  -->
-            <div class="contenuto-header">
+            <div class="contenuto">
 
                 <!-- titolo  -->
                 <h1 class="titolo-header">Il tuo posto per parlare</h1>
@@ -74,13 +74,61 @@
             </div>
 
 
+        </div>
+    </header>
 
 
+
+
+
+    <!-- section numero 2, img a sinistra e scritta a destra  -->
+    <section class="dimensioni-section section2">
+
+        <div class="contenuto-section">
+
+            <!-- immagine section numero 2 -->
+            <div class="immagine-section2">
+                <img src="img/item1.svg" alt="" class="img-section2">
+            </div>
+
+            <!-- testo section numero 2 -->
+            <div class="contenitore-testo-section2">
+                <h2 class="titolo-section">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p class="testo-section">I server Discord sono organizzati in canali telematici in cui puoi collaborare,
+                    condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
         </div>
 
+    </section>
+
+    <!-- fine section numero 2----------------------- -->
 
 
-    </header>
+
+
+
+    <!-- section numero 3, img a detsra e scritta a sinistra  -->
+    <section class="dimensioni-section section2">
+
+        <div class="contenuto-section">
+
+            <!-- immagine section numero 3 -->
+            <div class="immagine-section3">
+                <img src="img/item1.svg" alt="" class="img-section2">
+            </div>
+
+            <!-- testo section numero 3 -->
+            <div class="contenitore-testo-section2">
+                <h2 class="titolo-section">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p class="testo-section">I server Discord sono organizzati in canali telematici in cui puoi collaborare,
+                    condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- fine section numero 2----------------------- -->
+
 
 
 </body>
