--- a/index.html
+++ b/index.html
@@ -114,20 +114,20 @@
 
             <!-- immagine section numero 3 -->
             <div class="immagine-section3">
-                <img src="img/item1.svg" alt="" class="img-section2">
+                <img src="img/item2.svg" alt="" class="img-section2">
             </div>
 
             <!-- testo section numero 3 -->
             <div class="contenitore-testo-section2">
-                <h2 class="titolo-section">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                <p class="testo-section">I server Discord sono organizzati in canali telematici in cui puoi collaborare,
-                    condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                <h2 class="titolo-section">Dove trovarsi è facile</h2>
+                <p class="testo-section">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server
+                    possono vedere che sei li' e unirsi istantaneamente senza dover chiamare.</p>
             </div>
         </div>
 
     </section>
 
-    <!-- fine section numero 2----------------------- -->
+    <!-- fine section numero 3----------------------- -->
 
 
 
