--- a/index.html
+++ b/index.html
@@ -131,6 +131,33 @@
 
 
 
+
+
+    <!-- section numero 4, img a sinistra e scritta a destra  -->
+    <section class="dimensioni-section section2">
+
+        <div class="contenuto-section">
+
+            <!-- immagine section numero 4 -->
+            <div class="immagine-section2">
+                <img src="img/item3.svg" alt="" class="img-section2">
+            </div>
+
+            <!-- testo section numero 4 -->
+            <div class="contenitore-testo-section2">
+                <h2 class="titolo-section">Da pochi a un fandom</h2>
+                <p class="testo-section">Dai inizio a una community di qualsiasi dimensioni con strumenti di moderazione
+                    e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e
+                    molto altro.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- fine section numero 4----------------------- -->
+
+
+
 </body>
 
 </html>
