--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- logo  -->
                 <div class="logo">
                     <a href="">
-                        <img src="img/logo.svg" alt="">
+                        <img src="img/logo.svg" alt="logo discord">
                     </a>
                 </div>
 
@@ -88,7 +88,7 @@
 
             <!-- immagine section numero 2 -->
             <div class="immagine-section2">
-                <img src="img/item1.svg" alt="" class="img-section2">
+                <img src="img/item1.svg" alt="study group e rana che legge" class="img-section2">
             </div>
 
             <!-- testo section numero 2 -->
@@ -114,7 +114,7 @@
 
             <!-- immagine section numero 3 -->
             <div class="immagine-section3">
-                <img src="img/item2.svg" alt="" class="img-section2">
+                <img src="img/item2.svg" alt="just chillin e mago" class="img-section2">
             </div>
 
             <!-- testo section numero 3 -->
@@ -140,7 +140,7 @@
 
             <!-- immagine section numero 4 -->
             <div class="immagine-section2">
-                <img src="img/item3.svg" alt="" class="img-section2">
+                <img src="img/item3.svg" alt="coach e profilo genio" class="img-section2">
             </div>
 
             <!-- testo section numero 4 -->
@@ -155,6 +155,43 @@
     </section>
 
     <!-- fine section numero 4----------------------- -->
+
+
+
+
+
+
+    <!-- section numero 5, titolo e testo centrale, img centrale, sotto altro titolo con link  -->
+    <section class="dimensioni-section section2">
+
+        <div class="contenitore-section5">
+
+            <!-- titolo section numero 5 -->
+            <h2 class="titolo-section text-align-center">Tecnologia affidabile per tenersi in contatto</h2>
+
+            <!-- testo section numero 5 -->
+            <p class="testo-section text-align-center">Video e audio a bassa latenza ti faranno sentire come se foste
+                tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una
+                sessione di disegno con la condivisione schermo.
+            </p>
+
+            <!-- immagine section numero 5 -->
+            <div class="immagine-section5">
+                <img src="img/item4-big.svg" alt="tablet e iphone con personaggi">
+            </div>
+
+
+
+
+
+
+        </div>
+
+
+
+
+    </section>
+
 
 
 
