--- a/index.html
+++ b/index.html
@@ -77,122 +77,131 @@
         </div>
     </header>
 
+    <main>
 
+        <!-- section numero 2, img a sinistra e scritta a destra  -->
+        <section class="dimensioni-section section2">
 
+            <div class="contenuto-section">
 
+                <!-- immagine section numero 2 -->
+                <div class="immagine-section2">
+                    <img src="img/item1.svg" alt="study group e rana che legge" class="img-section2">
+                </div>
 
-    <!-- section numero 2, img a sinistra e scritta a destra  -->
-    <section class="dimensioni-section section2">
-
-        <div class="contenuto-section">
-
-            <!-- immagine section numero 2 -->
-            <div class="immagine-section2">
-                <img src="img/item1.svg" alt="study group e rana che legge" class="img-section2">
+                <!-- testo section numero 2 -->
+                <div class="contenitore-testo-section2">
+                    <h2 class="titolo-section">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p class="testo-section">I server Discord sono organizzati in canali telematici in cui puoi
+                        collaborare,
+                        condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
 
-            <!-- testo section numero 2 -->
-            <div class="contenitore-testo-section2">
-                <h2 class="titolo-section">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                <p class="testo-section">I server Discord sono organizzati in canali telematici in cui puoi collaborare,
-                    condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
-            </div>
-        </div>
+        </section>
 
-    </section>
-
-    <!-- fine section numero 2----------------------- -->
+        <!-- fine section numero 2----------------------- -->
 
 
 
 
 
-    <!-- section numero 3, img a detsra e scritta a sinistra  -->
-    <section class="dimensioni-section section2">
+        <!-- section numero 3, img a detsra e scritta a sinistra  -->
+        <section class="dimensioni-section section2">
 
-        <div class="contenuto-section">
+            <div class="contenuto-section">
 
-            <!-- immagine section numero 3 -->
-            <div class="immagine-section3">
-                <img src="img/item2.svg" alt="just chillin e mago" class="img-section2">
-            </div>
+                <!-- immagine section numero 3 -->
+                <div class="immagine-section3">
+                    <img src="img/item2.svg" alt="just chillin e mago" class="img-section2">
+                </div>
 
-            <!-- testo section numero 3 -->
-            <div class="contenitore-testo-section2">
-                <h2 class="titolo-section">Dove trovarsi è facile</h2>
-                <p class="testo-section">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server
-                    possono vedere che sei li' e unirsi istantaneamente senza dover chiamare.</p>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- fine section numero 3----------------------- -->
-
-
-
-
-
-    <!-- section numero 4, img a sinistra e scritta a destra  -->
-    <section class="dimensioni-section section2">
-
-        <div class="contenuto-section">
-
-            <!-- immagine section numero 4 -->
-            <div class="immagine-section2">
-                <img src="img/item3.svg" alt="coach e profilo genio" class="img-section2">
+                <!-- testo section numero 3 -->
+                <div class="contenitore-testo-section2">
+                    <h2 class="titolo-section">Dove trovarsi è facile</h2>
+                    <p class="testo-section">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo
+                        server
+                        possono vedere che sei li' e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
             </div>
 
-            <!-- testo section numero 4 -->
-            <div class="contenitore-testo-section2">
-                <h2 class="titolo-section">Da pochi a un fandom</h2>
-                <p class="testo-section">Dai inizio a una community di qualsiasi dimensioni con strumenti di moderazione
-                    e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e
-                    molto altro.</p>
-            </div>
-        </div>
+        </section>
 
-    </section>
-
-    <!-- fine section numero 4----------------------- -->
+        <!-- fine section numero 3----------------------- -->
 
 
 
 
 
+        <!-- section numero 4, img a sinistra e scritta a destra  -->
+        <section class="dimensioni-section section2">
 
-    <!-- section numero 5, titolo e testo centrale, img centrale, sotto altro titolo con link  -->
-    <section class="dimensioni-section section2">
+            <div class="contenuto-section">
 
-        <div class="contenitore-section5">
+                <!-- immagine section numero 4 -->
+                <div class="immagine-section2">
+                    <img src="img/item3.svg" alt="coach e profilo genio" class="img-section2">
+                </div>
 
-            <!-- titolo section numero 5 -->
-            <h2 class="titolo-section text-align-center">Tecnologia affidabile per tenersi in contatto</h2>
-
-            <!-- testo section numero 5 -->
-            <p class="testo-section text-align-center">Video e audio a bassa latenza ti faranno sentire come se foste
-                tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una
-                sessione di disegno con la condivisione schermo.
-            </p>
-
-            <!-- immagine section numero 5 -->
-            <div class="immagine-section5">
-                <img src="img/item4-big.svg" alt="tablet e iphone con personaggi">
+                <!-- testo section numero 4 -->
+                <div class="contenitore-testo-section2">
+                    <h2 class="titolo-section">Da pochi a un fandom</h2>
+                    <p class="testo-section">Dai inizio a una community di qualsiasi dimensioni con strumenti di
+                        moderazione
+                        e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e
+                        molto altro.</p>
+                </div>
             </div>
 
+        </section>
+
+        <!-- fine section numero 4----------------------- -->
 
 
 
 
 
-        </div>
+
+        <!-- section numero 5, titolo e testo centrale, img centrale, sotto altro titolo con link  -->
+        <section class="dimensioni-section section2">
+
+            <div class="contenitore-section5">
+
+                <!-- titolo section numero 5 -->
+                <h2 class="titolo-section text-align-center">Tecnologia affidabile per tenersi in contatto</h2>
+
+                <!-- testo section numero 5 -->
+                <p class="testo-section text-align-center">Video e audio a bassa latenza ti faranno sentire come se
+                    foste
+                    tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in
+                    una
+                    sessione di disegno con la condivisione schermo.
+                </p>
+
+                <!-- immagine section numero 5 -->
+                <div class="immagine-section5">
+                    <img src="img/item4-big.svg" alt="tablet e iphone con personaggi">
+                </div>
+
+                <!-- titolo sotto l immagine -->
+                <div class="stars">
+                    <h2 class="titolo-section text-align-center">Pronto a iniziare la tua avventura?</h2>
+                </div>
 
 
 
 
-    </section>
+
+            </div>
 
 
+
+
+        </section>
+
+    </main>
+
+    <footer></footer>
 
 
 </body>
