--- a/index.html
+++ b/index.html
@@ -165,43 +165,51 @@
         <!-- section numero 5, titolo e testo centrale, img centrale, sotto altro titolo con link  -->
         <section class="dimensioni-section section2">
 
-            <div class="contenitore-section5">
+            <!-- <div class="dimensioni-section contenitore-section5"> -->
 
-                <!-- titolo section numero 5 -->
-                <h2 class="titolo-section text-align-center">Tecnologia affidabile per tenersi in contatto</h2>
+            <!-- titolo section numero 5 -->
+            <h2 class="titolo-section text-align-center h2">Tecnologia affidabile per tenersi in contatto</h2>
 
-                <!-- testo section numero 5 -->
-                <p class="testo-section text-align-center">Video e audio a bassa latenza ti faranno sentire come se
-                    foste
-                    tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in
-                    una
-                    sessione di disegno con la condivisione schermo.
-                </p>
+            <!-- testo section numero 5 -->
+            <p class="testo-section text-align-center">Video e audio a bassa latenza ti faranno sentire come se
+                foste
+                tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in
+                una
+                sessione di disegno con la condivisione schermo.
+            </p>
 
-                <!-- immagine section numero 5 -->
-                <div class="immagine-section5">
-                    <img src="img/item4-big.svg" alt="tablet e iphone con personaggi">
-                </div>
-
-                <!-- titolo sotto l immagine -->
-                <div class="stars">
-                    <h2 class="titolo-section text-align-center">Pronto a iniziare la tua avventura?</h2>
-                </div>
-
-
-
-
-
+            <!-- immagine section numero 5 -->
+            <div class="immagine-section5">
+                <img src="img/item4-big.svg" alt="tablet e iphone con personaggi">
             </div>
 
+            <!-- titolo sotto l immagine -->
+            <div class="stars">
+                <h2 class="titolo-section text-align-center">Pronto a iniziare la tua avventura?</h2>
+            </div>
+
+            <!-- bottone link  -->
+            <div class="link-section5">
+                <a href="" class="link-generale bottone5">Scarica per Mac</a>
+            </div>
+
+
+            <!-- </div> -->
+        </section>
+
+    </main>
+
+
+    <!-- footer ------------------------>
+    <footer>
+
+        <section class="dimensioni-section section2 colorblack">
 
 
 
         </section>
 
-    </main>
-
-    <footer></footer>
+    </footer>
 
 
 </body>
