--- a/index.html
+++ b/index.html
@@ -205,7 +205,130 @@
 
         <section class="dimensioni-section section2 colorblack">
 
+            <div class="contenitore-footer">
 
+                <div class="box-sinistra">
+                    <a href="" class="link-footer link-box-sinistra">Il tuo posto per parlare</a>
+                    <select name="" id="lingua">
+                        <option value="">Italiano</option>
+                        <option value="">Inglese</option>
+                        <option value="">Francese</option>
+                        <option value="">Spagnolo</option>
+                    </select>
+                </div>
+
+                <div class="box-destra">
+                    <table>
+
+                        <tr>
+                            <td> <a class="riga1" href="">Prodotto</a></td>
+                            <td> <a class="riga1" href="">Compagnia</a></td>
+                            <td> <a class="riga1" href="">Risorse</a></td>
+                            <td> <a class="riga1" href="">Norma</a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href="">Scarica</a></td>
+                            <td> <a href="">Chi siamo</a></td>
+                            <td> <a href="">Scarica</a></td>
+                            <td> <a href="">Scarica</a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href="">Perché Discord</a></td>
+                            <td> <a href="">Lavora con noi</a></td>
+                            <td> <a href="">Perché Discord</a></td>
+                            <td> <a href="">Perché Discord</a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href="">Nitro</a></td>
+                            <td> <a href="">Marchio</a></td>
+                            <td> <a href="">Nitro</a></td>
+                            <td> <a href="">Nitro</a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href="">Sicurezza</a></td>
+                            <td> <a href="">Redazione</a></td>
+                            <td> <a href="">Sicurezza</a></td>
+                            <td> <a href="">Sicurezza</a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href="">Assistenza</a></td>
+                            <td> <a href="">Negozio</a></td>
+                            <td> <a href="">Assistenza</a></td>
+                            <td> <a href="">Assistenza</a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href=""></a></td>
+                            <td> <a href=""></a></td>
+                            <td> <a href="">Scarica</a></td>
+                            <td> <a href=""></a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href=""></a></td>
+                            <td> <a href=""></a></td>
+                            <td> <a href="">Perché Discord</a></td>
+                            <td> <a href=""></a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href=""></a></td>
+                            <td> <a href=""></a></td>
+                            <td> <a href="">Nitro</a></td>
+                            <td> <a href=""></a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href=""></a></td>
+                            <td> <a href=""></a></td>
+                            <td> <a href="">Sicurezza</a></td>
+                            <td> <a href=""></a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href=""></a></td>
+                            <td> <a href=""></a></td>
+                            <td> <a href="">Assistenza</a></td>
+                            <td> <a href=""></a></td>
+
+                        </tr>
+
+                        <tr>
+                            <td> <a href=""></a></td>
+                            <td> <a href=""></a></td>
+                            <td> <a href="">Assistenza</a></td>
+                            <td> <a href=""></a></td>
+
+                        </tr>
+
+
+
+                    </table>
+                </div>
+
+
+
+
+
+
+
+
+            </div>
 
         </section>
 
