finito il footer

--- a/index.html
+++ b/index.html
@@ -321,7 +321,20 @@
                     </table>
                 </div>
 
+                <div class="credits">
 
+                    <!-- logo  -->
+                    <div class="logo logo-footer">
+                        <a href="">
+                            <img src="img/logo.svg" alt="logo discord">
+                        </a>
+
+                        <div class="accedi ">
+                            <a href="" class="link-generale registrati">Registrati</a>
+                        </div>
+                    </div>
+
+                </div>
 
 
 
